cucul/cucul.h

/** \e libcucul canvas */
typedef struct cucul_canvas cucul_canvas_t;
/** dither structure */
typedef struct cucul_dither cucul_dither_t;
unsigned long int cucul_get_attr(cucul_canvas_t *, int, int);
int cucul_set_attr(cucul_canvas_t *, unsigned long int);
int cucul_put_attr(cucul_canvas_t *, int, int, unsigned long int);
int cucul_set_color_ansi(cucul_canvas_t *, unsigned char, unsigned char);
int cucul_set_canvas_handle(cucul_canvas_t *, int, int);
int cucul_get_canvas_handle_x(cucul_canvas_t *);
int cucul_get_canvas_handle_y(cucul_canvas_t *);
int cucul_set_canvas_boundaries(cucul_canvas_t *, int, int,
                                unsigned int, unsigned int);
/*  @} */

/** \defgroup transform libcucul canvas transformation
 *
 *  These functions perform horizontal and vertical canvas flipping.
 *
 *  @{ */
int cucul_invert(cucul_canvas_t *);
int cucul_flip(cucul_canvas_t *);
int cucul_flop(cucul_canvas_t *);
int cucul_rotate(cucul_canvas_t *);
/*  @} */

/** \defgroup attributes libcucul attribute conversions
 *
 *  These functions perform conversions between attribute values.
 *
 *  @{ */
unsigned char cucul_attr_to_ansi(unsigned long int);
unsigned char cucul_attr_to_ansi_fg(unsigned long int);
unsigned char cucul_attr_to_ansi_bg(unsigned long int);
/*  @} */

/** \defgroup frame libcucul canvas frame handling
 *
 *  These functions provide high level routines for canvas frame insertion,
 *  removal, copying etc.
 *
 *  @{ */
unsigned int cucul_get_frame_count(cucul_canvas_t *);
int cucul_set_frame(cucul_canvas_t *, unsigned int);
char const *cucul_get_frame_name(cucul_canvas_t *);
int cucul_set_frame_name(cucul_canvas_t *, char const *);
int cucul_create_frame(cucul_canvas_t *, unsigned int);
int cucul_free_frame(cucul_canvas_t *, unsigned int);
/*  @} */

/** \defgroup dither libcucul bitmap dithering
 *
 *  These functions provide high level routines for dither allocation and
 *  rendering.
 *
 *  @{ */
cucul_dither_t *cucul_create_dither(unsigned int, unsigned int,
                                    unsigned int, unsigned int,
                                    unsigned long int, unsigned long int,
                                    unsigned long int, unsigned long int);
int cucul_set_dither_palette(cucul_dither_t *,
                             unsigned int r[], unsigned int g[],
                             unsigned int b[], unsigned int a[]);
int cucul_set_dither_brightness(cucul_dither_t *, float);
int cucul_set_dither_gamma(cucul_dither_t *, float);
int cucul_set_dither_contrast(cucul_dither_t *, float);
int cucul_set_dither_invert(cucul_dither_t *, int);
int cucul_set_dither_antialias(cucul_dither_t *, char const *);
char const * const * cucul_get_dither_antialias_list(cucul_dither_t const *);
int cucul_set_dither_color(cucul_dither_t *, char const *);
char const * const * cucul_get_dither_color_list(cucul_dither_t const *);
int cucul_set_dither_charset(cucul_dither_t *, char const *);
char const * const * cucul_get_dither_charset_list(cucul_dither_t const *);
int cucul_set_dither_mode(cucul_dither_t *, char const *);
char const * const * cucul_get_dither_mode_list(cucul_dither_t const *);
int cucul_dither_bitmap(cucul_canvas_t *, int, int, int, int,
                         cucul_dither_t const *, void *);
int cucul_free_dither(cucul_dither_t *);