csharp/Cucul.cs


        public int getAttr(int x, int y)
        {
            return cucul_get_attr(cv, x, y);
        }

        public int setAttr(int a)
        {
            return cucul_set_attr(cv, a);
        }

        public int setAttr(int x, int y, int a)
        {
            return cucul_put_attr(cv, x, y, a);
        }

        public int setColorANSI(int fg, int bg)
        {
            return cucul_set_color_ansi(cv, fg, bg);
        }

        public int setColorARGB(int fg, int bg)
        {
            return cucul_set_color_ansi(cv, fg, bg);
        }

        public int setCanvasHandle(int x, int y)
        {
            return cucul_set_canvas_handle(cv, x, y);
        }

        public int getCanvasHandleX()
        {
            return cucul_get_canvas_handle_x(cv);
        }

        public int getCanvasHandleY()
        {
            return cucul_get_canvas_handle_y(cv);
        }

        public int setCanvasHandleY(int x, int y, int h,  int w)
        {
            return cucul_set_canvas_boundaries(cv, x, y, h, w); 
        }

          

        public int Invert()
        {
            return cucul_invert(cv);
        }

        public int Flip()
        {
            return cucul_flip(cv);
        }

        public int Flop()
        {
            return cucul_flop(cv);
        }

        public int Rotate()
        {
            return cucul_rotate(cv);
        }


        public int AttrToANSI(Int64 a)
        {
            return cucul_attr_to_ansi(a);
        }

        public int AttrToANSIFg(Int64 a)
        {
            return cucul_attr_to_ansi_fg(a);
        }

        public int AttrToANSIBg(Int64 a)
        {
            return cucul_attr_to_ansi_bg(a);
        }





        public int getFrameCount()
        {
            return cucul_get_frame_count(cv);
        }

        public int setFrame(int f)
        {
            return cucul_set_frame(cv, f);
        }

        public string getFrameName()
        {
            return cucul_get_frame_name(cv);
        }

        public int setFrameName(string n)
        {
            return cucul_set_frame_name(cv, n);
        }

        public int createFrame(int f)
        {
            return cucul_create_frame(cv, f);
        }

        public int freeFrame(int f)
        {
            return cucul_free_frame(cv, f);
        }



        /* Privates methods, are not meant to be called by user*/
        
        public IntPtr get_cucul_t()
        {
            return cv;
        }

    }




    public unsafe class CuculDither : IDisposable
    {
    [DllImport("libcucul.dll", CallingConvention=CallingConvention.Cdecl), SuppressUnmanagedCodeSecurity]   
      public static extern IntPtr cucul_create_dither(int bpp, int w,
                                                      int h, int pitch,
                                                      Int64 rmask,
                                                      Int64 gmask,
                                                      Int64 bmask,
                                                      Int64 amask);


    [DllImport("libcucul.dll", CallingConvention=CallingConvention.Cdecl), SuppressUnmanagedCodeSecurity]  
      public static extern int cucul_set_dither_palette(IntPtr d,
                             int[] r, int[] g,
                             int[] b, int[] a);
    [DllImport("libcucul.dll", CallingConvention=CallingConvention.Cdecl), SuppressUnmanagedCodeSecurity]  
      public static extern int cucul_set_dither_brightness(IntPtr d, float b);
    [DllImport("libcucul.dll", CallingConvention=CallingConvention.Cdecl), SuppressUnmanagedCodeSecurity]  
      public static extern int cucul_set_dither_gamma(IntPtr d, float g);
    [DllImport("libcucul.dll", CallingConvention=CallingConvention.Cdecl), SuppressUnmanagedCodeSecurity]  
      public static extern int cucul_set_dither_contrast(IntPtr d, float c);
    [DllImport("libcucul.dll", CallingConvention=CallingConvention.Cdecl), SuppressUnmanagedCodeSecurity]  
      public static extern int cucul_set_dither_invert(IntPtr d, int i);
    [DllImport("libcucul.dll", CallingConvention=CallingConvention.Cdecl), SuppressUnmanagedCodeSecurity]  
      public static extern int cucul_set_dither_antialias(IntPtr d, string s);
    [DllImport("libcucul.dll", CallingConvention=CallingConvention.Cdecl), SuppressUnmanagedCodeSecurity]  
      public static extern string[] cucul_get_dither_antialias_list(IntPtr d);
    [DllImport("libcucul.dll", CallingConvention=CallingConvention.Cdecl), SuppressUnmanagedCodeSecurity]  
      public static extern int cucul_set_dither_color(IntPtr d, string s);
    [DllImport("libcucul.dll", CallingConvention=CallingConvention.Cdecl), SuppressUnmanagedCodeSecurity]  
      public static extern string[] cucul_get_dither_color_list(IntPtr d);
    [DllImport("libcucul.dll", CallingConvention=CallingConvention.Cdecl), SuppressUnmanagedCodeSecurity]  
      public static extern int cucul_set_dither_charset(IntPtr d, string s);
    [DllImport("libcucul.dll", CallingConvention=CallingConvention.Cdecl), SuppressUnmanagedCodeSecurity]  
      public static extern string[] cucul_get_dither_charset_list(IntPtr d);
    [DllImport("libcucul.dll", CallingConvention=CallingConvention.Cdecl), SuppressUnmanagedCodeSecurity]  
      public static extern int cucul_set_dither_mode(IntPtr d, string s);
    [DllImport("libcucul.dll", CallingConvention=CallingConvention.Cdecl), SuppressUnmanagedCodeSecurity]  
      public static extern string[] cucul_get_dither_mode_list(IntPtr d);
    [DllImport("libcucul.dll", CallingConvention=CallingConvention.Cdecl), SuppressUnmanagedCodeSecurity]  
      public static extern int cucul_free_dither(IntPtr d);

  /* FIXME  [DllImport("libcucul.dll", CallingConvention=CallingConvention.Cdecl), SuppressUnmanagedCodeSecurity]  
      int cucul_dither_bitmap(Canvas c,int  x, int y, int w , int y,
                         IntPtr d2, void *);*/



        IntPtr dither;

        public CuculDither(int bpp, int w,int h, int pitch,
                           Int64 rmask, Int64 gmask,Int64 bmask, Int64 amask)
        {
            dither = cucul_create_dither(bpp, w, h, pitch, rmask, gmask, bmask, amask);
        }

        public void Dispose()
        {
            cucul_free_dither(dither);
            GC.SuppressFinalize(this);
        }

        public int setBrightness(float b)
        {
            return cucul_set_dither_brightness(dither, b);
        }

        public int setGamma(float g)
        {
            return cucul_set_dither_gamma(dither, g);
        }

        public int setContrast(float c)
        {
            return cucul_set_dither_contrast(dither, c);
        }

        public int setInvert(int i)
        {
            return cucul_set_dither_invert(dither, i);
        }

        public int setAntialias(string s)
        {
            return cucul_set_dither_antialias(dither, s);
        }

        public int setColor(string s)
        {
            return cucul_set_dither_color(dither, s);
        }

        public int setCharset(string s)
        {
            return cucul_set_dither_charset(dither, s);
        }

        public int setMode(string s)
        {
            return cucul_set_dither_mode(dither, s);
        }

        /* <FIXME> */
        public string[] getAntialiasList() 
        {
            return cucul_get_dither_antialias_list(dither);
        }

        public string[] getColorList() 
        {
            return cucul_get_dither_color_list(dither);
        }

        public string[] getCharsetList() 
        {
            return cucul_get_dither_charset_list(dither);
        }

        public string[] getModeList() 
        {
            return cucul_get_dither_mode_list(dither);
        }

        /* </FIXME> */
    }

}


